deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allinssl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: allinssl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: allinssl
    spec:
      containers:
        - name: allinssl
          image: ghcr.io/mysstack/allinssl:custom
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8888
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: storage
              mountPath: /www/allinssl/data
              subPath: data
            - name: storage
              mountPath: /www/allinssl/logs
              subPath: logs
            - name: storage
              mountPath: /www/allinssl/plugins
              subPath: plugins
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: allinssl
