deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: allinssl
spec:
  selector:
    app.kubernetes.io/name: allinssl
  ports:
    - name: http
      port: 80
      targetPort: http
