deploy/kubernetes/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allinssl
  namespace: allinssl
spec:
  ingressClassName: nginx
  rules:
    - host: allinssl.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: allinssl
                port:
                  number: 80
